# Jeonju_Library

./: README.md
OSS_Library/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  pyproject.toml
OSS_Library/backend/: __init__.py  main.py
OSS_Library/backend/api/routes/: auth.py  books.py  health.py  imports.py  libraries.py
OSS_Library/backend/core/: config.py  database.py  dependencies.py  security.py  seed_data.py
OSS_Library/backend/schemas/: auth.py  book.py  common.py  health.py  import_job.py  library.py
OSS_Library/backend/services/: __init__.py  import_service.py  user_service.py
OSS_Library/data/: library.csv  user.csv
OSS_Library/frontend/: app.py
